<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MTB Freeride</string>

    <string name="login_usuari">Nom d\'usuari</string>
    <string name="login_password">Contrasenya</string>
    <string name="login_sign_in">ENTRA</string>
    <string name="login_sign_in_short">Entrar</string>
    <string name="login_recupera_pass"><u>Recuperar contrasenya</u></string>
    <string name="login_recupera_info"></string>
    <string name="login_recupera_button">Sol·licitar</string>

    <string name="action_settings">Settings</string>
    <string name="img_inici">Image inici</string>
    <string name="title_activity_llibre_visites">LlibreVisites</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="login_sign_up">REGISTRA\'T</string>
    <string name="txt_o_login">O</string>

    <string name="title_activity_registre_usuari">RegistreUsuari</string>
    <string name="title_activity_detall_modalitat">Detall modalitat</string>
    <string name="title_activity_detall_gravar_valoracio">Valoració</string>
    <string name="im_login">img login</string>
    <string name="img_modal">image modal</string>
    <string name="titol_modalitat"></string>
    <string name="modalitat_video">Vídeo</string>
    <string name="detalls_modalitat"></string>

    <string name="penjaSo"></string>

    <string name="nom">Nom</string>
    <string name="primerCognom">Primer Cognom</string>
    <string name="segonCognom">Segon Cognom</string>
    <string name="email">Em@il</string>
    <string name="novaContra">Nova Contrasenya</string>
    <string name="repetirContra">Repeteix la Contrasenya</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_video">Veure video</string>
    <string name="play_valoracio"></string>
    <string name="togglebutton_valoracio"></string>
    <string name="title_activity_recuperar_contrasenya">Recuperar Contrasenya</string>

    <string name="hello_world">Hello world!</string>
    <string name="str_recuperar_pass">A continuació, escriu el teu nick i t\'enviarem un correu al teu compte associat, amb la contrasenya.\nMoltes gràcies.</string>
</resources>
