<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.norriors.java.mtbfreeride.Controllers.MainActivity$PlaceholderFragment"
    android:background="@drawable/gradien_lightblue">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/svMainFragment"
            android:scrollbars="none">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/White">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ivModalMain"
                        android:nestedScrollingEnabled="false"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/img_modal" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/titol_modalitat"
                        android:id="@+id/tvModalitat" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/DarkGray"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"/>


                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/btnDetallsModalitat"
                        android:layout_gravity="right"
                        android:background="@drawable/customappthem_btn_action_arrow"
                        android:contentDescription="@string/detalls_modalitat" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
